[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Thomas Brosset <thomas.brosset@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.12"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
GeoAlchemy2 = "^0.13.3"
cx-Oracle = "^8.3.0"
simplejson = "^3.19.1"
pytz = "^2023.3"
prefect = "^1.4"
coverage = "^7.2.7"
pytest = "^7.3.1"
geopandas = "^0.13.2"
SQLAlchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
css-inline = "^0.13.0"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
# Linting
## Type Checking and Data Validation
mypy = "^1.3.0"
## Code formatting
black = "^24.3.0"
## Code quality
isort = "^5.12.0"
pylint = "^2.17.4"
## Automation and management
pre-commit = "^3.3.3"
ipython = "^8.26.0"

[tool.poetry.scripts]
cli = "bin.cli:cli"

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.black]
line-length = 79

[tool.coverage.run]
source = ["."]
omit = ['src/utils/', 'tests/']

[tool.isort]
profile = "black"
atomic = "true"
combine_as_imports = "true"
line_length = 79

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$", "logger"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "bad-continuation",
  "c-extension-no-member",
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
